--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.4.1",
+    "stripe": "^8.204.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
